[#86DevUIAlignment][Marcus] fix: movie list poster ratio and genre tag style

--- a/src/Component/MovieCard/MovieCard.css
+++ b/src/Component/MovieCard/MovieCard.css
@@ -9,6 +9,7 @@
   
 .movie-image {
     width: 100%;
+    height: 100%;
     border-radius: 10px !important;
     box-shadow: 0px 5px 8px #00000029;
 }
@@ -43,6 +44,8 @@
     font-size: x-small;
     font-weight: 600;
     background-color: #C3C3C3;
-    padding: 1% 5%;
+    padding: .1rem .4rem;
+    margin-bottom: 3%;
+    margin-right: 3%;
     border-radius: 5% !important;
 }
